--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -5,10 +5,12 @@
       <app-ventas-dia></app-ventas-dia>
     </div>
 
-
     <div class="col-6">
-      <mat-card>.</mat-card>
+      <mat-card>
+        <app-ventas-mensuales></app-ventas-mensuales>
+      </mat-card>
     </div>
+
     <div class="col-3">
       <mat-card>.</mat-card>
     </div>
