grafico para ventas mensuales

--- a/src/app/modules/home/ventas-mensuales/ventas-mensuales.component.html
+++ b/src/app/modules/home/ventas-mensuales/ventas-mensuales.component.html
@@ -8,8 +8,7 @@
       <canvas baseChart
               [datasets]="barChartData"
               [labels]="barChartLabels"
-              [options]="barChartOptions"
-              [legend]="true">
+              [options]="barChartOptions">
       </canvas>
     </div>
   </div>
