modificacion ventas del dia

--- a/src/app/modules/home/ventas-dia/ventas-dia.component.scss
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.scss
@@ -1,11 +1,17 @@
 h2 {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: lighter;
+  color: #5c5c5c;
 }
 
 h1 {
   font-weight: bold;
-  font-size: 40px;
+  font-size: 28px;
+}
+
+img {
+  width: 20px;
+  height: 20px;
 }
 
 .mayorAlDiaAnterior {
