--- a/src/app/modules/home/ventas-dia/ventas-dia.component.html
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.html
@@ -3,15 +3,14 @@
     <div class="row">
       <h2>Ventas de hoy</h2>
     </div>
-    <div class="col d-flex justify-content-center">
-      <p style="font-weight: bold; font-size: 19px">$</p>
+    <div class="col d-flex">
+      <p style="font-weight: bold; font-size: 15px">$</p>
       <h1>4930,20</h1>
-    </div>
-
-    <div class="col d-flex justify-content-center">
-      <img src="assets/imgs/up.png">
-      <p class="mayorAlDiaAnterior"> 3 + que ayer</p>
-      <p *ngif="false"> 3 + que ayer</p>
+      <div class="m-lg-1">
+        <img src="assets/imgs/up.png">
+        <p class="mayorAlDiaAnterior"> 3 + que ayer</p>
+        <p *ngif="false"> 3 + que ayer</p>
+      </div>
     </div>
   </div>
 </mat-card>
