--- a/src/app/modules/home/ventas-dia/ventas-dia.component.html
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.html
@@ -3,14 +3,32 @@
     <div class="row">
       <h2>Ventas de hoy</h2>
     </div>
-    <div class="col d-flex">
-      <p style="font-weight: bold; font-size: 15px">$</p>
-      <h1>4930,20</h1>
-      <div class="m-lg-1">
-        <img src="assets/imgs/up.png">
-        <p class="mayorAlDiaAnterior"> 3 + que ayer</p>
-        <p *ngif="false"> 3 + que ayer</p>
+
+    <div class="row">
+
+      <div class="col-6">
+        <div class="col d-flex ">
+          <div class="color-indicator today"></div>
+          <h3>Hoy</h3>
+        </div>
+        <div class="col d-flex">
+          <p style="font-weight: bold; font-size: 15px">$</p>
+          <h1>4930,20</h1>
+        </div>
+        <div class="col d-flex ">
+          <div class="color-indicator yesterday"></div>
+          <h3>Ayer</h3>
+        </div>
+        <div class="col d-flex">
+          <p style="font-weight: bold; font-size: 15px">$</p>
+          <h1>4930,20</h1>
+        </div>
       </div>
+
+      <div class="col-6">
+      .
+      </div>
+
     </div>
   </div>
 </mat-card>
