--- a/src/app/modules/home/ventas-dia/ventas-dia.component.html
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.html
@@ -1,34 +1,33 @@
 <mat-card>
-  <div class="col p-4">
+  <div class="col p-3">
     <div class="row">
       <h2>Ventas de hoy</h2>
     </div>
 
-    <div class="row">
-
+    <div class="row align-items-start">
       <div class="col-6">
-        <div class="col d-flex ">
+        <div class="d-flex align-items-center">
           <div class="color-indicator today"></div>
-          <h3>Hoy</h3>
+          <h3 class="ms-2">Hoy</h3>
         </div>
-        <div class="col d-flex">
-          <p style="font-weight: bold; font-size: 15px">$</p>
-          <h1>4930,20</h1>
+        <div class="d-flex align-items-baseline">
+          <p class="currency-symbol">$</p>
+          <h1 class="value ms-1">4930,20</h1>
         </div>
-        <div class="col d-flex ">
+
+        <div class="d-flex align-items-center mt-3">
           <div class="color-indicator yesterday"></div>
-          <h3>Ayer</h3>
+          <h3 class="ms-2">Ayer</h3>
         </div>
-        <div class="col d-flex">
-          <p style="font-weight: bold; font-size: 15px">$</p>
-          <h1>4930,20</h1>
+        <div class="d-flex align-items-baseline">
+          <p class="currency-symbol">$</p>
+          <h1 class="value ms-1">4820,15</h1>
         </div>
       </div>
 
       <div class="col-6">
-      .
+        <!-- Espacio para el gráfico o contenido adicional -->
       </div>
-
     </div>
   </div>
 </mat-card>
