--- a/src/app/modules/home/ventas-dia/ventas-dia.component.scss
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.scss
@@ -1,24 +1,44 @@
+mat-card {
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 10px 15px;
+  color: #4c4c4c;
+  width: 350px;
+}
+
 h2 {
   font-size: 14px;
   font-weight: lighter;
-  color: #404040;
+  color: #575757;
+  margin-bottom: 10px;
 }
 
 h1 {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 18px;
+  margin: 0;
 }
 
-img {
-  width: 20px;
-  height: 20px;
+h3 {
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.currency-symbol {
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.value {
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .color-indicator {
-  width: 15px;
-  height: 15px;
-  border-radius: 20%;
-  margin: 0 auto 5px auto;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
 }
 
 .today {
