modificacion ventas del dia

--- a/src/app/modules/home/ventas-dia/ventas-dia.component.html
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.html
@@ -1,7 +1,7 @@
 <mat-card>
-  <div class="col p-3">
+  <div class="col p-1">
     <div class="row">
-      <h2>Ventas de hoy</h2>
+      <h2>Ventas diarias</h2>
     </div>
 
     <div class="row align-items-start">
@@ -15,7 +15,7 @@
           <h1 class="value ms-1">4930,20</h1>
         </div>
 
-        <div class="d-flex align-items-center mt-3">
+        <div class="d-flex align-items-center">
           <div class="color-indicator yesterday"></div>
           <h3 class="ms-2">Ayer</h3>
         </div>
