modificacion ventas del dia

--- a/src/app/modules/home/ventas-dia/ventas-dia.component.scss
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.scss
@@ -2,8 +2,7 @@ mat-card {
   background-color: #ffffff;
   border-radius: 8px;
   padding: 10px 15px;
-  color: #4c4c4c;
-  width: 350px;
+  color: #494949;
 }
 
 h2 {
@@ -42,9 +41,9 @@ h3 {
 }
 
 .today {
-  background-color: #5dade2;
+  background-color: #e15b35;
 }
 
 .yesterday {
-  background-color: #a1a1a1;
+  background-color: #979797;
 }
