--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,18 +1,14 @@
 <div class="container py-3">
   <div class="row">
 
-    <div class="col-4">
+    <div class="col-5">
       <app-ventas-dia></app-ventas-dia>
     </div>
 
-    <div class="col-4">
+    <div class="col-7">
       <mat-card>
-        .
+        <app-ventas-mensuales></app-ventas-mensuales>
       </mat-card>
-    </div>
-
-    <div class="col-4">
-      <mat-card>.</mat-card>
     </div>
   </div>
 
