--- a/src/app/modules/home/ventas-dia/ventas-dia.component.html
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.html
@@ -15,7 +15,7 @@
           <h1 class="value ms-1">4930,20</h1>
         </div>
 
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center mt-2">
           <div class="color-indicator yesterday"></div>
           <h3 class="ms-2">Ayer</h3>
         </div>
