--- a/src/app/modules/home/ventas-dia/ventas-dia.component.scss
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.scss
@@ -3,10 +3,11 @@ mat-card {
   border-radius: 8px;
   padding: 10px 15px;
   color: #494949;
+  height: 250px;
 }
 
 h2 {
-  font-size: 14px;
+  font-size: 15px;
   font-weight: lighter;
   color: #575757;
   margin-bottom: 10px;
