--- a/src/app/modules/home/ventas-mensuales/ventas-mensuales.component.html
+++ b/src/app/modules/home/ventas-mensuales/ventas-mensuales.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <div class="col p-4">
+  <div class="col p-1">
     <div class="row">
       <h2>Ventas mensuales</h2>
     </div>
@@ -8,7 +8,9 @@
       <canvas baseChart
               [datasets]="barChartData"
               [labels]="barChartLabels"
-              [options]="barChartOptions">
+              [options]="barChartOptions"
+
+      >
       </canvas>
     </div>
   </div>
