--- a/src/app/modules/home/ventas-mensuales/ventas-mensuales.component.scss
+++ b/src/app/modules/home/ventas-mensuales/ventas-mensuales.component.scss
@@ -1,6 +1,16 @@
+mat-card {
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 10px 15px;
+  color: #494949;
+  height: 250px;
+}
+
 h2 {
-  font-size: 18px;
+  font-size: 15px;
   font-weight: lighter;
+  color: #575757;
+  margin-bottom: 10px;
 }
 
 h1 {
