--- a/src/app/modules/home/ventas-mensuales/ventas-mensuales.component.html
+++ b/src/app/modules/home/ventas-mensuales/ventas-mensuales.component.html
@@ -4,12 +4,11 @@
       <h2>Ventas mensuales</h2>
     </div>
 
-    <div style="display: block;">
+    <div style="display: block; height: calc(100% - 50px);">
       <canvas baseChart
               [datasets]="barChartData"
               [labels]="barChartLabels"
               [options]="barChartOptions"
-
       >
       </canvas>
     </div>
