--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -14,7 +14,7 @@
 
   <div class="row">
     <div class="col-6">
-
+      <app-ultimos-movimientos></app-ultimos-movimientos>
     </div>
   </div>
 </div>
