--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -12,9 +12,14 @@
     </div>
   </div>
 
+  <br>
+
   <div class="row">
     <div class="col-6">
       <app-ultimos-movimientos></app-ultimos-movimientos>
+    </div>
+    <div class="col-6">
+      <app-productos-stock-limitado></app-productos-stock-limitado>
     </div>
   </div>
 </div>
