--- a/src/app/modules/home/productos-stock-limitado/productos-stock-limitado.component.html
+++ b/src/app/modules/home/productos-stock-limitado/productos-stock-limitado.component.html
@@ -1,1 +1,9 @@
-<p>productos-stock-limitado works!</p>
+<mat-card>
+  <div class="col p-1">
+    <div class="row">
+      <h2>Productos con stock mínimo</h2>
+    </div>
+
+
+  </div>
+</mat-card>
