--- a/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
+++ b/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
@@ -1,1 +1,10 @@
-<p>ultimos-movimientos works!</p>
+<mat-card>
+  <div class="col p-1">
+    <div class="row">
+      <h2>Últimos movimientos</h2>
+    </div>
+
+
+  </div>
+</mat-card>
+
