se agrega un input de busqueda en ultimos movimientos

--- a/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
+++ b/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
@@ -4,6 +4,15 @@
       <h2>Últimos movimientos</h2>
     </div>
 
+    <!-- Input de búsqueda -->
+    <div class="col">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Buscar</mat-label>
+        <input type="text" [formControl]="txBuscar" id="txBuscar" matInput/>
+        <mat-icon matPrefix>search</mat-icon>
+      </mat-form-field>
+    </div>
+
 
   </div>
 </mat-card>
