--- a/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
+++ b/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
@@ -13,6 +13,21 @@
       </mat-form-field>
     </div>
 
+    <div *ngFor="let ultimoMovimiento of ultimosMovimientos">
+      <div class="transaction-item">
+        <div class="icon-container">
+          <mat-icon></mat-icon>
+        </div>
+        <div class="details">
+          <div class="name">{{ ultimoMovimiento.tipo }}</div>
+          <div class="subtitle">{{ ultimoMovimiento.codigo }}</div>
+        </div>
+        <div class="amount-time">
+          <div class="amount">{{ ultimoMovimiento.cantidad ? '$' + ultimoMovimiento.cantidad : '-' }}</div>
+          <div class="time">{{ ultimoMovimiento.dia + ' ' + ultimoMovimiento.hora }}</div>
+        </div>
+      </div>
+    </div>
 
   </div>
 </mat-card>
