--- a/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.scss
+++ b/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.scss
@@ -3,7 +3,7 @@ mat-card {
   border-radius: 8px;
   padding: 10px 15px;
   color: #494949;
-  height: 250px;
+  max-height: 500px;
 }
 
 h2 {
@@ -24,3 +24,68 @@ h3 {
   font-weight: normal;
   margin: 0;
 }
+
+.transaction-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 1px solid #e0e0e0;
+  font-family: Arial, sans-serif;
+
+  .icon-container {
+    margin-right: 10px;
+
+    .icon {
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  .details {
+    flex: 1;
+
+    .name {
+      font-weight: bold;
+      font-size: 16px;
+      margin-bottom: 2px;
+    }
+
+    .subtitle {
+      font-size: 14px;
+      color: #757575;
+    }
+
+    .status {
+      display: flex;
+      align-items: center;
+      font-size: 12px;
+      color: #4caf50;
+
+      .status-icon {
+        width: 14px;
+        height: 14px;
+        margin-right: 5px;
+      }
+    }
+  }
+
+  .amount-time {
+    text-align: right;
+
+    .amount {
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    .negative {
+      color: #f44336;
+    }
+
+    .time {
+      font-size: 12px;
+      color: #757575;
+    }
+  }
+}
+
