scroll vertical en ultimos movimientos

--- a/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
+++ b/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
@@ -22,7 +22,7 @@
           </div>
           <div class="details">
             <div class="name">{{ ultimoMovimiento.tipo }}</div>
-            <div class="subtitle">{{ ultimoMovimiento.codigo }}</div>
+            <div class="subtitle">N°: {{ ultimoMovimiento.codigo }}</div>
           </div>
           <div class="amount-time">
             <div class="amount">{{ ultimoMovimiento.cantidad ? '$' + ultimoMovimiento.cantidad : '-' }}</div>
