--- a/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.scss
+++ b/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.scss
@@ -37,18 +37,17 @@ h3 {
   justify-content: space-between;
   padding: 10px;
   border-bottom: 1px solid #e0e0e0;
-  font-family: Arial, sans-serif;
 
   &:last-child {
-    border-bottom: none; /* Quita la línea para el último elemento */
+    border-bottom: none;
   }
 
   .icon-container {
     margin-right: 10px;
 
     .icon {
-      width: 40px;
-      height: 40px;
+      width: 30px;
+      height: 30px;
     }
   }
 
@@ -97,5 +96,9 @@ h3 {
       color: #757575;
     }
   }
+}
+
+.transaction-item:hover {
+  background: #f8f8f8;
 }
 
