--- a/src/app/modules/home/productos-stock-limitado/productos-stock-limitado.component.html
+++ b/src/app/modules/home/productos-stock-limitado/productos-stock-limitado.component.html
@@ -1,9 +1,13 @@
 <mat-card>
   <div class="col p-1">
     <div class="row">
-      <h2>Productos con stock mínimo</h2>
+      <div class="col d-flex justify-content-between align-items-center">
+        <h2>Productos con stock mínimo</h2>
+        <button class="btn" mat-icon-button matTooltip="Crear orden de compra" (click)="crearOrdenDeCompra()">
+          <mat-icon style="font-size: 18px; color: #e15b35">receipt</mat-icon>
+        </button>
+      </div>
+
     </div>
-
-
   </div>
 </mat-card>
