componente de asistencia empleados

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,10 +1,8 @@
 <div class="container py-3">
   <div class="row">
-
     <div class="col-5">
       <app-ventas-dia></app-ventas-dia>
     </div>
-
     <div class="col-7">
       <mat-card>
         <app-ventas-mensuales></app-ventas-mensuales>
@@ -19,8 +17,23 @@
       <app-ultimos-movimientos></app-ultimos-movimientos>
     </div>
     <div class="col-6">
+      <!--
       <app-productos-stock-limitado></app-productos-stock-limitado>
+      -->
     </div>
   </div>
+
+  <br>
+
+  <div class="row">
+    <div class="col-4">
+      <app-asistencias-empleados></app-asistencias-empleados>
+    </div>
+    <div class="col-4">
+
+    </div>
+  </div>
+
+
 </div>
 
