--- a/src/app/modules/home/asistencias-empleados/asistencias-empleados.component.scss
+++ b/src/app/modules/home/asistencias-empleados/asistencias-empleados.component.scss
@@ -24,3 +24,59 @@ h3 {
   font-weight: normal;
   margin: 0;
 }
+
+
+.asistencia-list-container {
+  max-height: 300px; /* Altura máxima del contenedor */
+  overflow-y: auto;  /* Habilita el scroll vertical */
+  padding-right: 5px; /* Espaciado para evitar que el scroll tape contenido */
+}
+
+.asistencia-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 1px solid #e0e0e0;
+  margin-right: 10px;
+
+  &:last-child {
+    border-bottom: none;
+  }
+
+  .icon-container {
+    margin-right: 20px;
+
+    .product-image {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%; /* Hace la imagen circular */
+      object-fit: cover; /* Ajusta la imagen al contenedor circular */
+    }
+  }
+
+  .details {
+    flex: 1;
+
+    .name {
+      font-weight: bold;
+      font-size: 16px;
+      margin-bottom: 2px;
+    }
+
+    .subtitle {
+      font-size: 14px;
+      color: #757575;
+    }
+  }
+
+  .amount {
+    font-weight: bold;
+    font-size: 16px;
+    text-align: right;
+  }
+}
+
+.product-item:hover {
+  background: #f8f8f8; /* Cambia el fondo al pasar el mouse */
+}
