componente de ultimos clientes

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -30,7 +30,7 @@
       <app-asistencias-empleados></app-asistencias-empleados>
     </div>
     <div class="col-4">
-
+      <app-ultimos-clientes-registrados></app-ultimos-clientes-registrados>
     </div>
   </div>
 
