--- a/src/app/modules/home/asistencias-empleados/asistencias-empleados.component.html
+++ b/src/app/modules/home/asistencias-empleados/asistencias-empleados.component.html
@@ -1,11 +1,17 @@
 <mat-card>
   <div class="col p-1">
     <div class="row">
-      <h2>Asistencias</h2>
+      <h2>Asistencias de hoy</h2>
     </div>
 
     <div class="spinner-wrapper" *ngIf="buscando">
       <mat-spinner></mat-spinner>
+    </div>
+
+    <div class="no-asistencias-container" *ngIf="asistencias.length == 0 && !buscando">
+      <div class="subtitle justify-content-center text-center">
+        Todavía ningún empleado marcó su asistencia.
+      </div>
     </div>
 
     <div class="asistencia-list-container" *ngIf="asistencias">
