--- a/src/app/modules/home/ultimos-clientes-registrados/ultimos-clientes-registrados.component.html
+++ b/src/app/modules/home/ultimos-clientes-registrados/ultimos-clientes-registrados.component.html
@@ -16,7 +16,7 @@
           </div>
           <div class="details">
             <div class="name">{{ cliente.nombre + ' ' + cliente.apellido }}</div>
-            <div class="subtitle">Mail: {{ cliente.mail }}</div>
+            <div class="subtitle">{{ cliente.mail }}</div>
           </div>
         </div>
       </div>
