--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -29,7 +29,15 @@
       <div class="col-md">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Saldo</mat-label>
-          <input matInput formControlName="txBalance" type="text" mask="separator.2" prefix="$ " thousandSeparator=",">
+          <input
+            matInput
+            formControlName="txBalance"
+            type="text"
+            mask="separator.2"
+            prefix="$ "
+            thousandSeparator=","
+            [allowNegativeNumbers]="true"
+          />
         </mat-form-field>
         <app-error-messages [control]="txBalance"></app-error-messages>
       </div>
@@ -64,9 +72,9 @@
       </div>
     </div>
 
-    <br>
+    <br *ngIf="ventas.length > 0">
 
-    <mat-card [hidden]="!(ventas.length > 0 && !esRegistro)">
+    <mat-card [hidden]="!(ventas.length > 0)">
       <mat-card-content>
         <div class="row">
           <div class="col-md-12">
@@ -116,6 +124,9 @@
                   <button class="btn" mat-icon-button matTooltip="Ver" (click)="verVenta(venta)">
                     <mat-icon class="ver">visibility</mat-icon>
                   </button>
+                  <button *ngIf="venta.comprobanteAfip.comprobante_pdf_url == null && venta.anulada == 0" mat-icon-button color="primary"  matTooltip="Facturar venta" (click)="facturarVenta(venta)">
+                    <mat-icon class="facturar">attach_money</mat-icon>
+                  </button>
                 </mat-cell>
               </ng-container>
 
@@ -131,8 +142,8 @@
       </mat-card-content>
     </mat-card>
 
-    <h5 *ngIf="!isLoading && this.ventas.length === 0 && !esRegistro" class="alert alert-secondary text-center">
-      No se encuentran ventas para esta cuenta para mostrar, por favor realice una nueva búsqueda.
+    <h5 *ngIf="!isLoading && this.ventas.length === 0" class="alert alert-secondary text-center">
+      No se encuentran ventas de cuenta corriente de este cliente para mostrar.
     </h5>
   </form>
 
