orden de compra

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -32,6 +32,9 @@
     <div class="col-4">
       <app-ultimos-clientes-registrados></app-ultimos-clientes-registrados>
     </div>
+    <div class="col-4">
+      <app-ordenes-de-compra></app-ordenes-de-compra>
+    </div>
   </div>
 
 
