--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -14,6 +14,9 @@
             <button mat-icon-button (click)="enfocar()">
               <mat-icon>qr_code_scanner</mat-icon>
             </button>
+            <button mat-stroked-button color="warn" class="btn round new-product-btn" (click)="mostrarQR()">
+              <mat-icon>add</mat-icon>Probar QR
+            </button>
           </div>
 
           <!-- Input de búsqueda -->
