--- a/src/app/modules/home/ordenes-de-compra/ordenes-de-compra.component.html
+++ b/src/app/modules/home/ordenes-de-compra/ordenes-de-compra.component.html
@@ -8,15 +8,27 @@
       <mat-spinner></mat-spinner>
     </div>
 
-    <div class="ordenes-list-container" *ngIf="clientes">
-      <div *ngFor="let cliente of clientes">
+    <div class="no-ordenes-container" *ngIf="ordenesDeCompras.length == 0 && !buscando">
+      <div class="subtitle justify-content-center text-center">
+        Todavía no se registró ninguna orden de compra.
+      </div>
+    </div>
+
+
+    <div class="ordenes-list-container" *ngIf="ordenesDeCompras">
+      <div *ngFor="let orden of ordenesDeCompras">
         <div class="orden-item">
           <div class="icon-container">
             <mat-icon>receipt</mat-icon>
           </div>
           <div class="details">
-            <div class="name">{{ cliente.nombre + ' ' + cliente.apellido }}</div>
-            <div class="subtitle">{{ cliente.mail }}</div>
+            <div class="name">{{ orden.id }}</div>
+            <div class="subtitle">{{ orden.proveedor }}</div>
+            <div class="subtitle">{{ '$ ' + orden.total }}</div>
+          </div>
+          <div class="amount-time">
+            <div [ngClass]="obtenerClaseEstado(orden.estadoPedido)">{{ orden.estadoPedido }}</div>
+            <div class="time">{{ orden.fechaPedido | date: 'dd/MM/yyyy' }}</div>
           </div>
         </div>
       </div>
