--- a/src/app/modules/home/ordenes-de-compra/ordenes-de-compra.component.scss
+++ b/src/app/modules/home/ordenes-de-compra/ordenes-de-compra.component.scss
@@ -25,9 +25,18 @@ h3 {
   margin: 0;
 }
 
+.no-ordenes-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 150px; /* Ajusta la altura según tus necesidades */
+  text-align: center;
+  color: #757575;
+}
+
 
 .ordenes-list-container {
-  max-height: 230px; /* Altura máxima del contenedor */
+  max-height: 200px; /* Altura máxima del contenedor */
   overflow-y: auto;  /* Habilita el scroll vertical */
   padding-right: 5px; /* Espaciado para evitar que el scroll tape contenido */
 }
@@ -79,4 +88,39 @@ h3 {
 
 .orden-item:hover {
   background: #f8f8f8; /* Cambia el fondo al pasar el mouse */
+}
+
+.estado-recibido {
+  background-color: #d4edda;
+  color: #318142;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.estado-recibido-diferencias {
+  background-color: #fff3cd;
+  color: #eab318;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.estado-cancelado {
+  background-color: #ffdfe2;
+  color: #83393f;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.estado-pendiente {
+  background-color: #dffaff;
+  color: #397a83;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.estado-devuelto {
+  background-color: #eedfff;
+  color: #5d3983;
+  padding: 5px;
+  border-radius: 3px;
 }
