comando para productos sin stock

--- a/src/app/modules/home/productos-stock-limitado/productos-stock-limitado.component.html
+++ b/src/app/modules/home/productos-stock-limitado/productos-stock-limitado.component.html
@@ -22,7 +22,7 @@
           <div class="details">
             <div class="name">{{ producto.nombre }}</div>
             <div class="subtitle">CB: {{ producto.codigoBarra }}</div>
-            <div class="subtitle">Proveedor: {{ producto.proveedor.nombre }}</div>
+            <div class="subtitle">Proveedor: {{ producto.proveedor }}</div>
           </div>
           <div class="amount">
             {{ producto.cantidadEnStock }}
