--- a/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.html
+++ b/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.html
@@ -13,19 +13,28 @@
 
   <form [formGroup]="form">
     <div class="row pt-4">
-      <div class="col-md-8">
+      <div class="col-md">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Nombre</mat-label>
           <input type="text" matInput [formControl]="txNombre"/>
         </mat-form-field>
         <app-error-messages [control]="txNombre"></app-error-messages>
       </div>
-      <div class="col-md-4">
+      <div class="col-md">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Porcentaje de descuento</mat-label>
           <input type="text" matInput [formControl]="txPorcentajeDescuento" maxlength="3" (input)="validarPorcentaje()"/>
         </mat-form-field>
         <app-error-messages [control]="txPorcentajeDescuento"></app-error-messages>
+      </div>
+      <div class="col-md">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Fecha Hasta (inclusive)</mat-label>
+          <input matInput [matDatepicker]="pickerHasta" [formControl]="txFechaHasta" [min]="fechaHoy"/>
+          <mat-datepicker-toggle matSuffix [for]="pickerHasta"></mat-datepicker-toggle>
+          <mat-datepicker #pickerHasta></mat-datepicker>
+        </mat-form-field>
+        <app-error-messages [control]="txFechaHasta"></app-error-messages>
       </div>
     </div>
   </form>
