--- a/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.html
+++ b/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.html
@@ -79,7 +79,9 @@
           </mat-form-field>
           <app-error-messages [control]="txMonto"></app-error-messages>
 
-          <button mat-raised-button color="accent" class="btn round" id="btnBuscar">Añadir movimiento</button>
+          <div class="btnBuscarCointainer">
+            <button mat-raised-button color="accent" class="btn round" id="btnBuscar" (click)="registrarMovimiento()">Añadir movimiento</button>
+          </div>
         </form>
       </mat-card>
     </div>
@@ -95,8 +97,8 @@
         <button mat-icon-button matPrefix>
           <mat-icon>filter_list</mat-icon>
         </button>
-        <mat-select>
-          <mat-option *ngFor="let formaPago of formasPago" [value]="formaPago.id">
+        <mat-select [(value)]="formaPagoDefecto" (selectionChange)="filtrarTabla($event.value)">
+          <mat-option *ngFor="let formaPago of filtradoPorFormasPago" [value]="formaPago.id">
             {{ formaPago.nombre }}
           </mat-option>
         </mat-select>
