--- a/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.scss
+++ b/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.scss
@@ -94,7 +94,7 @@
 .diferencia-container {
   margin-bottom: 20px;
   padding: 15px;
-  border: 1px solid #ddd;
+  border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #fefefe;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -140,7 +140,7 @@
   color: #555;
 }
 
-/* Clase base para diferencia (rojo) */
+/* Clase base para diferencia */
 .value {
   font-size: 1.2rem;
   font-weight: bold;
@@ -161,5 +161,10 @@
   color: mediumseagreen;
 }
 
+.btnBuscarCointainer {
+  display: flex;
+}
 
-
+#btnBuscar {
+  margin-left: auto;
+}
