--- a/src/app/modules/home/ordenes-de-compra/ordenes-de-compra.component.scss
+++ b/src/app/modules/home/ordenes-de-compra/ordenes-de-compra.component.scss
@@ -84,6 +84,11 @@ h3 {
     font-size: 16px;
     text-align: right;
   }
+
+  .time {
+    font-size: 12px;
+    color: #757575;
+  }
 }
 
 .orden-item:hover {
